<resources>
    <string name="app_name">LabExamApp</string>
    <!--    导航栏-->
    <string name="tab_home">首页</string>
    <string name="tab_find">发现</string>
    <string name="tab_message">消息</string>
    <string name="tab_service">服务</string>

    <!-- Navigation -->
    <string name="nav_login">点击头像登录</string>
    <string name="nav_home">首页</string>
    <string name="nav_vip">我的大会员</string>
    <string name="nav_vip_point">我的大会员</string>
    <string name="nav_unicom">免流量服务</string>
    <string name="nav_download">离线缓存</string>
    <string name="nav_view_later">稍后再看</string>
    <string name="nav_star">我的收藏</string>
    <string name="nav_history">历史记录</string>
    <string name="nav_people">我的关注</string>
    <string name="nav_account_balance_wallet">B币钱包</string>
    <string name="nav_color_lens">主题选择</string>
    <string name="nav_settings">设置与帮助</string>





    <string name="menu_top_download_tips">离线列表</string>
    <string name="menu_top_search_tips">搜索</string>
</resources>
